Added images and ability types

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <style>
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 14px;
+        font-size: 12px;
         min-width: 300px;
       }
       #status {
@@ -33,6 +33,9 @@
   </head>
   <body>
     <input type="text" id="pkmnName"><button type="submit" id="submitButton">Search!</button>
+    <p id="status"></p>
+    <img id="image-result">
+    <p id="ability"></p>
     <p id="text"></p>
    <!--  <p id="pkmnType"></p><br>
     <p id="notEffective"></p><br>
