--- a/popup.html
+++ b/popup.html
@@ -4,14 +4,21 @@
     <title>Battledex</title>
     <script src="jquery-1.11.3.js"></script>
     <script src="popup.js"></script>
-  </head>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>  </head>
   <body>
+    <center>
     <input type="text" id="pkmnName" />
     <button type="submit" id="submitButton">Search!</button>
     <p id="status"></p>
     <img id="image-result" />
-    <p id="ability"></p>
-    <p id="text"></p>
+    <div class="ability">
+      <p id="ability"></p>
+    </div>
+    </center>
+    <div class="text">
+      <p id="text"></p>
+    </div>
     <!--
     <p id="pkmnType"></p><br>
     <p id="notEffective"></p><br>
