added loading spinner, added enter by enter key press

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
   <div id="height"></div>
   <div id="weight"></div>
   <img id="sprite" />
+  <img id="spinner" />
   <div id="description"></div>
   <div id="type1"></div>
   <div id="type2"></div>
