Added type images, auto complete

--- a/popup.html
+++ b/popup.html
@@ -2,15 +2,20 @@
 <html>
 <head>
   <title>Battledex</title>
-  <script src="jquery-1.11.3.js"></script>
-  <script src="popup.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <!--Javascript Files-->
+  <script src="js/jquery-1.11.3.js"></script>
+  <script src="js/awesomplete.js" async></script>
+  <script src="js/popup.js"></script>
+  <!--Stylesheets-->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/awesomplete.css" />
+  <!--Fonts-->
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">  
 </head>
 <body>
   <div id="pokemonName"></div>
   <div id="input">
-    <input type="text" id="pkmnName" />
+    <input type="text" id="pkmnName"/>
     <input type="button" value="Submit" id="submitButton"">
   </div>
   <div id="height"></div>
@@ -18,7 +23,7 @@
   <img id="sprite" />
   <img id="spinner" />
   <div id="description"></div>
-  <div id="type1"></div>
-  <div id="type2"></div>
+  <img id="type1" src=""></div>
+  <img id="type2" src=""></div>
 </body>
 </html>
